--- a/fotos.html
+++ b/fotos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Goggle Glass</title>
     <link rel="stylesheet" href="_css/estilo.css"/>
+    <link rel="stylesheet" href="_css/fotos.css">
 </head>
 <script type="text/javascript" src="_javascript/funcoes.js"></script>
 <body>
@@ -17,7 +18,7 @@
 <h2>A revolução do Google está chegando</h2>
 </hgroup>
 
-<img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+<img id="icone" src="_imagens/fotos.png">
 
 <nav id="menu">
 <h1>Menu Principal</h1>
@@ -31,26 +32,43 @@
 </nav>
 </header>
 
+    <section id="corpo-full">
+        <article id= "noticia-principal">    
+            <header id=cabecalho-artigo>
+                <hgroup>
+                    <h3>Glass > Fotos</h3>
+                    <h1>Galeria de Imagens do Google Glass</h1>
+                    <h2>por Jeffrey Douglas</h2>
+                    <h3 class="direita"> Atualizado em 01/Maio/2013</h3>
+                </hgroup>
+            </header>
+
 Glass > Fotos
 Galeria de Imagens do Google Glass
 por Gustavo Guanabara
 Atualizado em 01/Maio/2013
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+<p>
+    Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+</p>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+<ul>
+    <li><span>Agenda e lembretes</span></li>
+    <li><span>Sergey Brin usando o Glass</span></li>
+    <li><span>Leve e compacto</span></li>
+    <li><span>Sensação de uma tela de 50"</span></li>
+    <li><span>Vários tipos de lente</span></li>
+    <li><span>Informações importantes</span></li>
+</ul>
 
-Copyright 2013 - by Gustavo Guanabara
+        </article>
+    </section>
 
-<footer id="rodape">
-    <p>Copyright 2013 - by Gustavo Guanabara<br/>
-    <a href="http://facebook.com" target="blank">Facebook</a> |<a href="http://twitter.com" target="blank"> Twitter</a></p>
-    </footer>
-    </div>
-    </body>
-    </html
+    <footer id="rodape">
+        <p>Copyright 2013 - by Gustavo Guanabara<br/>
+            <a href="http://facebook.com" target="blank">Facebook</a> |
+            <a href="http://twitter.com" target="blank"> Twitter</a></p>
+        </footer>
+</div>
+</body>
+</html
