--- a/fotos.html
+++ b/fotos.html
@@ -43,22 +43,17 @@
                 </hgroup>
             </header>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
 <p>
     Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
 </p>
 
-<ul>
-    <li><span>Agenda e lembretes</span></li>
-    <li><span>Sergey Brin usando o Glass</span></li>
-    <li><span>Leve e compacto</span></li>
-    <li><span>Sensação de uma tela de 50"</span></li>
-    <li><span>Vários tipos de lente</span></li>
-    <li><span>Informações importantes</span></li>
+<ul id="album-fotos">
+    <li id="fotos01"><span>Agenda e lembretes</span></li>
+    <li id="fotos02"><span>Sergey Brin usando o Glass</span></li>
+    <li id="fotos03"><span>Leve e compacto</span></li>
+    <li id="fotos04"><span>Sensação de uma tela de 50"</span></li>
+    <li id="fotos05"><span>Vários tipos de lente</span></li>
+    <li id="fotos06"><span>Informações importantes</span></li>
 </ul>
 
         </article>
