--- a/multimidia.html
+++ b/multimidia.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Goggle Glass</title>
     <link rel="stylesheet" href="_css/estilo.css"/>
+    <link rel="stylesheet" href="_css/media.css"/>
 </head>
 <script type="text/javascript" src="_javascript/funcoes.js"></script>
 <body>
@@ -31,26 +32,33 @@
 </nav>
 </header>
 
-[AQUI ENTRA UMA FOTO]
+<section id="corpo-full">
+    <article id= "noticia-principal">    
+        <header id=cabecalho-artigo>
+            <hgroup>
+                <h3>Glass > Fotos</h3>
+                <h1>Galeria de Imagens do Google Glass</h1>
+                <h2>por Jeffrey Douglas</h2>
+                <h3 class="direita"> Atualizado em 01/Maio/2013</h3>
+            </hgroup>
+        </header>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
-
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
-
+<div id="tv-radio">
+    <audio id="musica" controls="controls">
+            <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+            <source src="_media/2009-lovers-carvings-bibio.m4a" type="audio/x-aac"/>
+            <source src="_media/2009-lovers-carvings-bibio.ogg" type="audio/ogg"/>
+            Desculpe, mas não foi possivel carregar seu áudio.
+    </audio>
+    <video id="filme" controls="controls">
+            <source src="_media/getting-started.mp4" type="video/mp4"/>
+            <source src="_media/getting-started.webm" type="video/webm"/>
+            <source src="_media/getting-started.ogv" type="video/ogg"/>
+            Desculpe, mas não foi possivel carregar seu video.
+    </videos>
+</div>
+</article>
+</section>
 <footer id="rodape">
     <p>Copyright 2013 - by Gustavo Guanabara<br/>
     <a href="http://facebook.com" target="blank">Facebook</a> |<a href="http://twitter.com" target="blank"> Twitter</a></p>
